--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Setup Git
+        run: apk add --no-cache git
       - name: Setup Python
         run: apk add --update python3 py3-pip && ln -sf python3 /usr/bin/python
       - name: Generate site
