--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,5 +60,7 @@ nav:
   - Home: index.md
   - Y5S1:
     - Climate Change:
-      - 'Climate Change/Singapore/Singapore.md'
+      - 'Climate Change/Singapore.md'
+      - 'Climate Change/Global Efforts.md'
+      - 'Climate Change/Worldwide Impact.md'
 
