--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ theme:
 
   features:
     - navigation.tabs
+    - search.suggest
+    - search.share
 
   # 404 page
   static_templates:
@@ -120,3 +122,4 @@ nav:
 
 plugins:
   - mkdocs-jupyter
+  - search
