--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,10 +92,10 @@ nav:
         - Essays:
           - 'EL5131\Technology\Cancel Culture\Essays\essay0.md'
     - Unit 1 - 4th Industrial Revolution:
-      - 'EL5131/FourIR/Industry.md'
+      - 'EL5131/FourIR & Globalization/Industry.md'
       - Articles:
-        - 'EL5131/FourIR/Articles/article0.md'
-        - 'EL5131/FourIR/Articles/article1.md'
+        - 'EL5131/FourIR & Globalization/Articles/article0.md'
+        - 'EL5131/FourIR & Globalization/Articles/article1.md'
     - Unit 2 - Climate Change:
       - Home: 'EL5131/Climate Change/index.md'
       - 'EL5131/Climate Change/Singapore.md'
