--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,16 +81,16 @@ nav:
     - 'EL5131/Stats and Quotes Notes.md'
     - Technology:
       - Big Tech:
-        - Home: 'EL5131\Technology\Big Tech\index.md.md'
+        - Home: 'EL5131/Technology/Big Tech/index.md.md'
         - Articles:
           - 'EL5131/Technology/Big Tech/Articles/article0.md'
           - 'EL5131/Technology/Big Tech/Articles/article1.md'
         - Essays:
-          - 'EL5131\Technology\Big Tech\Essays\essay0.md'
-          - 'EL5131\Technology\Big Tech\Essays\essay1.md'
+          - 'EL5131/Technology/Big Tech/Essays/essay0.md'
+          - 'EL5131/Technology/Big Tech/Essays/essay1.md'
       - Cancel Culture:
         - Essays:
-          - 'EL5131\Technology\Cancel Culture\Essays\essay0.md'
+          - 'EL5131/Technology/Cancel Culture/Essays/essay0.md'
     - Unit 1 - 4th Industrial Revolution:
       - 'EL5131/FourIR & Globalization/Industry.md'
       - Articles:
@@ -102,16 +102,16 @@ nav:
       - 'EL5131/Climate Change/Global Efforts.md'
       - 'EL5131/Climate Change/Worldwide Impact.md'
       - Articles:
-        - 'EL5131\Climate Change\Articles\article0.md'
-        - 'EL5131\Climate Change\Articles\article1.md'
-        - 'EL5131\Climate Change\Articles\article2.md'
-        - 'EL5131\Climate Change\Articles\article3.md'
-        - 'EL5131\Climate Change\Articles\article4.md'
+        - 'EL5131/Climate Change/Articles/article0.md'
+        - 'EL5131/Climate Change/Articles/article1.md'
+        - 'EL5131/Climate Change/Articles/article2.md'
+        - 'EL5131/Climate Change/Articles/article3.md'
+        - 'EL5131/Climate Change/Articles/article4.md'
     - Unit 2 - Pandemic:
       - 'EL5131/Pandemic/Inequality.md'
       - 'EL5131/Pandemic/Vaccines.md'
       - Articles:
-        - 'EL5131\Pandemic\Articles\article0.md'
+        - 'EL5131/Pandemic/Articles/article0.md'
   - PC5131:
     - Home: 'PC5131/index.md'
     - 'PC5131/Rotational Mechanics.md'
