--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
+      - run: chmod +x ./CI.sh
       - run: ./CI.sh
